--- a/index.html
+++ b/index.html
@@ -1,162 +1,233 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Patricia Brin Portfolio</title>
-    <link rel="icon" href="W03.logo.png" type="icon">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <style>
-        body {
-            font-family: 'Poppins', sans-serif;
-        }
-        #projects {
-            background-color: transparent;
-            padding-top: 60px;
-            padding-bottom: 60px;
-        }
-        #projects h2 {
-            text-align: center;
-            margin-bottom: 30px;
-            font-size: 2rem;
-        }
-        .card {
-            margin-bottom: 20px;
-        }
-        #contact {
-            text-align: center; 
-            padding-top: 60px;
-            padding-bottom: 60px;
-        }
-        #contact h2 {
-            font-size: 2rem;
-            margin-bottom: 20px;
-        }
-        #contact h2 i {
-            margin-right: 10px; 
-            font-size: 1.2em; 
-            vertical-align: middle; 
-            color: #333; 
-        }
-        .social-links {
-            margin-top: 20px;
-        }
-        .social-links a {
-            display: inline-block;
-            margin: 0 15px;
-            color: #333;
-            font-size: 24px;
-            text-decoration: none;
-            transition: color 0.3s ease;
-        }
-        .social-links a:hover {
-            color: #007bff;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Patricia Brin Portfolio</title>
+  <link rel="icon" href="https://i.ibb.co/M1YZ1Wc/W03-logo.png" type="image/png">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+  <style>
+    body {
+      font-family: 'Poppins', sans-serif;
+      background-color: #e5ddde;
+      color: #333;
+    }
+
+    .navbar {
+      background-color: #496977 !important;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+    }
+
+    .navbar .nav-link,
+    .navbar-brand {
+      color: #fff !important;
+    }
+
+    .profile-section {
+      position: relative;
+      margin-top: 56px;
+      background-color: #e5ddde;
+    }
+
+    .cover-photo {
+      background-image: url('https://i.ibb.co/d5ZgPDT/studio-ghibli-cover.jpg');
+      background-size: cover;
+      background-position: center;
+      height: 220px;
+      width: 100%;
+    }
+
+    .profile-content {
+      margin-top: -75px;
+      padding: 20px;
+      text-align: center;
+    }
+
+    .profile-img {
+      width: 150px;
+      height: 150px;
+      object-fit: cover;
+      border-radius: 50%;
+      border: 5px solid #fff;
+      background-color: #fff;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+    }
+
+    #projects {
+      padding: 60px 20px;
+      background-color: #ffffff;
+    }
+
+    #projects h2 {
+      text-align: center;
+      margin-bottom: 40px;
+      font-size: 2.2rem;
+      font-weight: 600;
+    }
+
+    .card {
+      border: none;
+      border-radius: 15px;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .card:hover {
+      transform: translateY(-8px);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+    }
+
+    .card-img-top {
+      border-top-left-radius: 15px;
+      border-top-right-radius: 15px;
+      height: 200px;
+      object-fit: cover;
+    }
+
+    .btn-primary {
+      background-color: #496977;
+      border-color: #496977;
+      border-radius: 30px;
+      padding: 8px 20px;
+    }
+
+    .btn-primary:hover {
+      background-color: #3a5562;
+      border-color: #3a5562;
+    }
+
+    #contact {
+      background-color: #e5ddde;
+      padding: 60px 20px;
+      text-align: center;
+    }
+
+    #contact h2 {
+      font-size: 2rem;
+      margin-bottom: 20px;
+      color: #333;
+    }
+
+    .social-links a {
+      display: inline-block;
+      margin: 0 15px;
+      color: #496977;
+      font-size: 26px;
+      transition: color 0.3s ease;
+    }
+
+    .social-links a:hover {
+      color: #3a5562;
+    }
+
+    footer {
+      background-color: #496977;
+      color: #fff;
+      padding: 15px 0;
+    }
+
+    footer p {
+      margin: 0;
+    }
+  </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <div class="container">
-            <a class="navbar-brand" href="#">
-                <img src="../A04/W03.logo.png" alt="Logo" width="35" height="30" class="d-inline-block align-text-top">
-                Patricia Brin
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#about">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#projects">Projects</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
 
-    <section id="about" class="container mt-5 pt-5">
-      <div class="row">
-          <div class="col-md-6 mx-auto text-center">
-              <img src="../A04/patricia.png" alt="Your Profile Picture" class="img-fluid rounded shadow mb-3" style="max-width: 200px; border-radius: 15px;">
-              <h1>Hello, I'm Patricia Brin</h1>
-              <p class="lead">I am a second-year student taking up Diploma in Information Technology at Polytechnic University of the Philippines – Sto. Tomas Branch.
-                  I'm eager to learn new things, and I'm now developing my programming, web development, and IT foundations abilities.</p>
-              <p>Welcome to my portfolio! Here you'll find a collection of my projects, demonstrating my journey and abilities in web development. Feel free to explore and get in touch!</p>
-          </div>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="#">
+        <img src="https://i.ibb.co/M1YZ1Wc/W03-logo.png" alt="Logo" width="35" height="30" class="d-inline-block align-text-top">
+        Patricia Brin
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+          <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+        </ul>
       </div>
+    </div>
+  </nav>
+
+  <!-- Profile Section -->
+  <section id="about" class="profile-section">
+    <div class="cover-photo"></div>
+    <div class="profile-content">
+      <img src="https://i.ibb.co/qBbbnqg/patricia.png" alt="Your Profile Picture" class="profile-img">
+      <h1 class="mt-3">Patricia Brin</h1>
+      <p class="lead">Diploma in Information Technology student at PUP – Sto. Tomas Branch.</p>
+      <p>Welcome to my portfolio! I'm passionate about technology and always eager to grow. Below you'll find a showcase of my academic and creative web projects.</p>
+    </div>
   </section>
 
-    <section id="projects" class="container mt-5">
-        <h2 class="mb-4">My Projects</h2>
-        <div class="row">
-            <div class="col-lg-4 col-md-6">
-                <div class="card shadow m-3">
-                    <img src="A04/Reno13.png" class="card-img-top" alt="Activity 4">
-                    <div class="card-body">
-                        <h5 class="card-title">Activity 04</h5>
-                        <p class="card-text">A one-page HTML about any specific hardware device.</p>
-                        <a href="A04/index.html" class="btn btn-primary">See Project</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6">
-                <div class="card shadow m-3">
-                    <img src="A05/amsterdam.jpg" class="card-img-top" alt="Activity 5">
-                    <div class="card-body">
-                        <h5 class="card-title">Activity 05</h5>
-                        <p class="card-text">A one-page HTML about your preferred place you want to featured.</p>
-                        <a href="A05/index.html" class="btn btn-primary">See Project</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6">
-                <div class="card shadow m-3">
-                    <img src="" class="card-img-top" alt="Activty 6">
-                    <div class="card-body">
-                        <h5 class="card-title">Activity 06</h5>
-                        <p class="card-text">Description of Activty 6 here.</p>
-                        <a href="" class="btn btn-primary">See Project</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6">
-                <div class="card shadow m-3">
-                    <img src="" class="card-img-top" alt="Activity 7">
-                    <div class="card-body">
-                        <h5 class="card-title">Activity 07</h5>
-                        <p class="card-text">Description of Activity 7 here.</p>
-                        <a href="" class="btn btn-primary">See Project</a>
-                    </div>
-                </div>
-            </div>
+  <!-- Projects Section -->
+  <section id="projects" class="container mt-5">
+    <h2 class="mb-4">My Projects</h2>
+    <div class="row">
+      <div class="col-lg-4 col-md-6">
+        <div class="card shadow m-3">
+          <img src="https://i.pinimg.com/736x/98/9a/ae/989aaefb4f9b3e27a2eae49f2e0beb05.jpg" class="card-img-top" alt="Activity 4">
+          <div class="card-body">
+            <h5 class="card-title">Activity 04</h5>
+            <p class="card-text">A one-page HTML about any specific hardware device.</p>
+            <a href="A04/index.html" class="btn btn-primary">See Project</a>
+          </div>
         </div>
-    </section>
-
-    <section id="contact" class="container mt-5">
-        <h2></i>My Contacts</h2>
-        <div class="social-links">
-            <a href="https://www.facebook.com/patricianicolebbrin?mibextid=ZbWKwL" target="_blank" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-            <a href="https://www.instagram.com/krabbiepatty_?igsh=ZTl0dmJtc3gxbzlm" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-            <a href="https://patriciabrin.github.io/" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
+      </div>
+      <div class="col-lg-4 col-md-6">
+        <div class="card shadow m-3">
+          <img src="https://i.pinimg.com/736x/b3/41/bb/b341bb582e477278fabfc2fc99feff60.jpg" class="card-img-top" alt="Activity 5">
+          <div class="card-body">
+            <h5 class="card-title">Activity 05</h5>
+            <p class="card-text">A one-page HTML about your preferred place you want to feature.</p>
+            <a href="A05/index.html" class="btn btn-primary">See Project</a>
+          </div>
         </div>
-    </section>
-
-    <footer class="bg-dark text-light py-3 mt-5">
-        <div class="container text-center">
-            <p>&copy; 2025 Patricia Brin. All rights reserved.</p>
+      </div>
+      <div class="col-lg-4 col-md-6">
+        <div class="card shadow m-3">
+          <img src="https://i.pinimg.com/736x/e2/f2/fa/e2f2fa06f9c3f0c91456bd123830e2d2.jpg" class="card-img-top" alt="Activity 6">
+          <div class="card-body">
+            <h5 class="card-title">Activity 06</h5>
+            <p class="card-text">Description of Activity 6 here.</p>
+            <a href="A06/index.html" class="btn btn-primary">See Project</a>
+          </div>
         </div>
-    </footer>
+      </div>
+      <div class="col-lg-4 col-md-6">
+        <div class="card shadow m-3">
+          <img src="https://via.placeholder.com/400x200?text=Activity+7" class="card-img-top" alt="Activity 7">
+          <div class="card-body">
+            <h5 class="card-title">Activity 07</h5>
+            <p class="card-text">Description of Activity 7 here.</p>
+            <a href="#" class="btn btn-primary">See Project</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Contact Section -->
+  <section id="contact" class="container mt-5">
+    <h2><i class="fas fa-envelope"></i> My Contacts</h2>
+    <div class="social-links">
+      <a href="https://www.facebook.com/patricianicolebbrin?mibextid=ZbWKwL" target="_blank"><i class="fab fa-facebook"></i></a>
+      <a href="https://www.instagram.com/krabbiepatty_?igsh=ZTl0dmJtc3gxbzlm" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://patriciabrin.github.io/" target="_blank"><i class="fab fa-github"></i></a>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="text-center">
+    <p>&copy; 2025 Patricia Brin. All rights reserved.</p>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
