--- a/index.html
+++ b/index.html
@@ -3,59 +3,50 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Patricia Brin</title>
-  <link rel="icon" href="../A04/W03.logo.png" type="icon"/>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <title>Patricia Brin Portfolio</title>
+  <link rel="icon" href="W03.logo.png" type="icon" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
 
   <style>
     body {
       font-family: 'Poppins', sans-serif;
-      background-color: #e5ddde;
-      color: #333;
+      background-color: #f8f9fa;
     }
 
+    /* Navbar */
     .navbar {
-      background-color: #496977 !important;
       box-shadow: 0 4px 6px rgba(0,0,0,0.1);
     }
 
-    .navbar .nav-link,
-    .navbar-brand {
-      color: #fff !important;
-    }
-
-    .profile-section {
-      position: relative;
-      margin-top: 56px;
-      background-color: #e5ddde;
-    }
-
-    .cover-photo {
-      background-image: url('');
-      background-size: cover;
-      background-position: center;
-      height: 220px;
-      width: 100%;
-    }
-
-    .profile-content {
-      margin-top: -75px;
-      padding: 20px;
+    /* Hero About Section */
+    #about {
+      background: linear-gradient(to right, #fefefe, #f1f1f1);
+      padding: 80px 20px;
       text-align: center;
+      border-bottom: 1px solid #ddd;
     }
 
-    .profile-img {
-      width: 150px;
-      height: 150px;
-      object-fit: cover;
+    #about img {
       border-radius: 50%;
-      border: 5px solid #fff;
-      background-color: #fff;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+      border: 1px solid #0a1a2b;
+      max-width: 180px;
+      margin-bottom: 20px;
     }
 
+    #about h1 {
+      font-weight: 700;
+      color: #333;
+    }
+
+    #about p {
+      color: #555;
+      max-width: 700px;
+      margin: 0 auto 10px;
+    }
+
+    /* Projects Section */
     #projects {
       padding: 60px 20px;
       background-color: #ffffff;
@@ -68,58 +59,36 @@
       font-weight: 600;
     }
 
-    .card-container { 
-      height: 350px; 
-      width: 100%;
-      display: flex;
-      flex-direction: column;
+    .card {
       border: none;
       border-radius: 15px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
-      overflow: hidden; 
       transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
 
-    .card-container:hover {
+    .card:hover {
       transform: translateY(-8px);
       box-shadow: 0 8px 20px rgba(0,0,0,0.1);
     }
 
-    .card-body {
-      flex-grow: 1; 
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between; 
-      padding: 15px;
+    .card-img-top {
+      border-top-left-radius: 15px;
+      border-top-right-radius: 15px;
+      height: 200px;
+      object-fit: cover;
     }
 
-    .card-title {
-      font-size: 1.25rem;
-      margin-bottom: 0.75rem;
-    }
-
-    .card-text {
-      font-size: 1rem;
-      color: #6c757d;
-      margin-bottom: 1rem;
-      flex-grow: 1; 
+    .card-body h5 {
+      font-weight: 600;
     }
 
     .btn-primary {
-      background-color: #496977;
-      border-color: #496977;
       border-radius: 30px;
       padding: 8px 20px;
-      align-self: flex-start; 
     }
 
-    .btn-primary:hover {
-      background-color: #3a5562;
-      border-color: #3a5562;
-    }
-
+    /* Contact */
     #contact {
-      background-color: #e5ddde;
+      background-color: #f0f4f8;
       padding: 60px 20px;
       text-align: center;
     }
@@ -133,36 +102,32 @@
     .social-links a {
       display: inline-block;
       margin: 0 15px;
-      color: #496977;
+      color: #444;
       font-size: 26px;
       transition: color 0.3s ease;
     }
 
     .social-links a:hover {
-      color: #3a5562;
+      color: #007bff;
     }
 
     footer {
-      background-color: #496977;
-      color: #fff;
-      padding: 15px 0;
+      background-color: #212529;
+      color: #bbb;
     }
 
     footer p {
       margin: 0;
     }
-
-    .col-lg-4, .col-md-6 {
-      display: flex; 
-    }
   </style>
 </head>
+
 <body>
 
-  <nav class="navbar navbar-expand-lg fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
       <a class="navbar-brand" href="#">
-        <img src="../A04/W03-logo.png" alt="logo" width="35" height="30" class="d-inline-block align-text-top">
+        <img src="../A04/W03.logo.png" alt="Logo" width="35" height="30" class="d-inline-block align-text-top"/>
         Patricia Brin
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -170,7 +135,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+          <li class="nav-item"><a class="nav-link active" href="#about">About</a></li>
           <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
           <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
         </ul>
@@ -178,22 +143,21 @@
     </div>
   </nav>
 
-  <section id="about" class="profile-section">
-    <div class="cover-photo"></div>
-    <div class="profile-content">
-      <link rel="icon" href="../A04/patricia.png" alt="Your Profile Picture" class="profile-img"/>
-      <h1 class="mt-3">Patricia Brin</h1>
-      <p class="lead">Diploma in Information Technology student at PUP – Sto. Tomas Branch.</p>
-      <p>Welcome to my portfolio! Below you'll find a showcase of my academic and creative web projects.</p>
+  <section id="about" class="pt-5 mt-5">
+    <div class="container">
+      <img src="../A04/patricia.png" alt="Your Profile Picture" class="img-fluid"/>
+      <h1>Hello, I'm Patricia Brin</h1>
+      <p class="lead">I am a second-year student taking up Diploma in Information Technology at Polytechnic University of the Philippines – Sto. Tomas Branch. I'm eager to learn new things, and I'm now developing my programming, web development, and IT foundations abilities.</p>
+      <p>Welcome to my portfolio! Here you'll find a collection of my projects, demonstrating my journey and abilities in web development. Feel free to explore and get in touch!</p>
     </div>
   </section>
 
-  <section id="projects" class="container mt-5">
-    <h2 class="mb-4">My Projects</h2>
+  <section id="projects" class="container">
+    <h2>My Projects</h2>
     <div class="row">
       <div class="col-lg-4 col-md-6">
-        <div class="card-container shadow m-3">
-          <img src="https://i.pinimg.com/736x/49/8b/b9/498bb9add8d3bef02023cc65f8b76b4c.jpg" class="card-img-top" alt="Activity 4">
+        <div class="card shadow-sm mb-4">
+          <img src="https://i.pinimg.com/736x/49/8b/b9/498bb9add8d3bef02023cc65f8b76b4c.jpg" class="card-img-top" alt="Activity 4" />
           <div class="card-body">
             <h5 class="card-title">Activity 04</h5>
             <p class="card-text">A one-page HTML about any specific hardware device.</p>
@@ -202,18 +166,18 @@
         </div>
       </div>
       <div class="col-lg-4 col-md-6">
-        <div class="card-container shadow m-3">
-          <img src="https://i.pinimg.com/736x/58/44/4b/58444baad048be6e4baaa85f655aba55.jpg" class="card-img-top" alt="Activity 5">
+        <div class="card shadow-sm mb-4">
+          <img src="https://i.pinimg.com/736x/8b/49/51/8b49510d8e254c10fc2ea966dd88595e.jpg" class="card-img-top" alt="Activity 5" />
           <div class="card-body">
             <h5 class="card-title">Activity 05</h5>
-            <p class="card-text">A one-page HTML about your preferred place you want to feature.</p>
+            <p class="card-text">A one-page HTML about your preferred place you want to featured.</p>
             <a href="A05/index.html" class="btn btn-primary">See Project</a>
           </div>
         </div>
       </div>
       <div class="col-lg-4 col-md-6">
-        <div class="card-container shadow m-3">
-          <img src="https://i.pinimg.com/736x/80/b7/5b/80b75b0205cbb5b34ca3992edb5f5983.jpg" class="card-img-top" alt="Activity 6">
+        <div class="card shadow-sm mb-4">
+          <img src="https://i.pinimg.com/736x/ec/0a/a8/ec0aa8aa61d9a56e10453bc5b64e36b9.jpg" class="card-img-top" alt="Activity 6" />
           <div class="card-body">
             <h5 class="card-title">Activity 06</h5>
             <p class="card-text">An HTML website that contains some form of gallery. It can be about anything.</p>
@@ -222,20 +186,20 @@
         </div>
       </div>
       <div class="col-lg-4 col-md-6">
-        <div class="card-container shadow m-3">
-          <img src="https://i.pinimg.com/736x/22/65/6b/22656b961fb47363218d008bf9b57d1b.jpg" class="card-img-top" alt="Activity 7">
+        <div class="card shadow-sm mb-4">
+          <img src="https://i.pinimg.com/736x/cb/ac/02/cbac022d42b1f0d2308b8ac2ff2170f0.jpg" class="card-img-top" alt="Activity 7" />
           <div class="card-body">
             <h5 class="card-title">Activity 07</h5>
-            <p class="card-text">An HTML website that utilizes a free public API with JSON return. It can be about anything. It can have one or more pages..</p>
-            <a href="" class="btn btn-primary">See Project</a>
+            <p class="card-text">Description of Activity 7 here.</p>
+            <a href="A07/index.html" class="btn btn-primary">See Project</a>
           </div>
         </div>
       </div>
     </div>
   </section>
 
-  <section id="contact" class="container mt-5">
-    <h2><i class="fas fa-envelope"></i> My Contacts</h2>
+  <section id="contact">
+    <h2><i class="fas fa-address-book"></i> My Contacts</h2>
     <div class="social-links">
       <a href="https://www.facebook.com/patricianicolebbrin?mibextid=ZbWKwL" target="_blank"><i class="fab fa-facebook"></i></a>
       <a href="https://www.instagram.com/krabbiepatty_?igsh=ZTl0dmJtc3gxbzlm" target="_blank"><i class="fab fa-instagram"></i></a>
@@ -243,7 +207,7 @@
     </div>
   </section>
 
-  <footer class="text-center">
+  <footer class="bg-dark text-center py-3">
     <p>&copy; 2025 Patricia Brin. All rights reserved.</p>
   </footer>
 
