--- a/index.html
+++ b/index.html
@@ -191,6 +191,16 @@
         </div>
       </div>
     </div>
+    <div class="col-lg-4 col-md-6">
+      <div class="card shadow-sm mb-4">
+        <img src="https://i.pinimg.com/736x/f0/dd/e3/f0dde3d3b323b50dea265927839111c0.jpg" class="card-img-top" alt="Activity 8" />
+        <div class="card-body">
+          <h5 class="card-title">Actvity 08</h5>
+          <p class="card-text">An HTML design that implements the Parallax design."</p>
+          <a href="A07/index.html" class="btn btn-primary">See Projecct</a>
+        </div>
+      </div>
+    </div>
   </section>
 
   <section id="contact">
@@ -201,7 +211,7 @@
       <a href="https://patriciabrin.github.io/" target="_blank"><i class="fab fa-github"></i></a>
     </div>
   </section>
-
+  
   <footer class="bg-dark text-center py-3">
     <p>&copy; 2025 Patricia Brin. All rights reserved.</p>
   </footer>
