--- a/A06/index.html
+++ b/A06/index.html
@@ -39,7 +39,7 @@
         #Meet\ the\ Members,
         #moreContent,
         #colorBtn {
-             transition: background-color 0.5s ease, color 0.5s ease, border-color 0.5s ease;
+              transition: background-color 0.5s ease, color 0.5s ease;
         }
 
         .gallery-item {
