--- a/index.html
+++ b/index.html
@@ -146,8 +146,7 @@
       <div style="max-width: 500px;">
         <h2 class="fw-semibold">About Me</h2>
         <p>
-          I'm a second-year student at the Polytechnic University of the Philippines - Sto. Tomas, currently taking a Diploma in Information Management. I enjoy building user-friendly web pages and exploring creative design techniques using HTML, CSS, and JavaScript. Passionate about tech, learning, and continuous improvement.
-        </p>
+          I'm a second-year student at the Polytechnic University of the Philippines - Sto. Tomas, currently taking a Diploma in Information Management.   </p>
       </div>
   </section>
 
